tests/vertical-slice/reject/supervisor_init_arg_non_bitcopy.hew
// Reject fixture: supervised child init arg with a non-reproducible type.
//
// The supervisor bootstrap uses an init-closure restart model (v0.6).
// Scalar BitCopy primitives and owned string/bytes are admitted (the thunk
// loads or deep-clones them per incarnation).  Owned collections (Vec,
// HashMap, HashSet), records, enums, generic, alias, user-defined, and
// handle types are rejected — their clone-in-thunk codegen is not wired
// (or is structurally forbidden for handles).
//
// Expected diagnostic: E_SUPERVISOR_INIT_ARG_NON_BITCOPY

actor Collector {
    var items: Vec<i64>;
    init(items: Vec<i64>) {
        items = items;
    }
    receive fn noop() {}
}

supervisor App {
    strategy: one_for_one;
    intensity: 3 within 60s;

    child c: Collector(items: []);
}

fn main() -> i64 {
    spawn App;
    42
}
